# ProductDiscoveryTerminal

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_validation_first.py  0003_recommendation_v2.py  0004_v2_correctness_hardening.py  0005_discovery_runs_eval.py  0006_field_level_freshness.py  0007_research_priority_score.py  0008_discovery_jsonb.py  0009_product_validation_pipeline.py
backend/app/: main.py
backend/app/api/routes/: backtests.py  discovery.py  ingestion.py  opportunities.py  plugins.py  products.py  security.py  validation.py  validation_projects.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py  types.py
backend/app/economics/: __init__.py  cost_ceiling.py
backend/app/evaluation/: __init__.py  __main__.py  harness.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  discovery.py  enums.py  insight.py  json.py  mixins.py  observation.py  plugin_run.py  product.py  recommendation.py  score.py  signal.py  validation.py
backend/app/pipeline/: amazon_refresh.py  analyzer_runner.py  ingestion_runner.py  runner.py
backend/app/plugins/: registry.py
backend/app/schemas/: discovery.py  plugin.py  product.py  score.py  validation.py
backend/app/scoring/: config.py  formulas.py  v2.py
backend/app/security/: __init__.py  compliance_check.py  redaction.py  runtime.py
backend/app/services/: backtest_service.py  comparable_service.py  discovery_service.py  discovery_worker.py  normalization_service.py  observation_service.py  product_service.py  product_validation_service.py  scoring_service.py  validation_service.py
backend/app/tests/: conftest.py  test_amazon_production_plugins.py  test_amazon_sp_api.py  test_amazon_sp_api_connectivity.py  test_api.py  test_cost_ceiling.py  test_discovery_runs.py  test_discovery_worker.py  test_evaluation_harness.py  test_normalization.py  test_pipeline.py  test_plugins.py  test_product_validation_pipeline.py  test_recommendation_v2.py  test_scoring.py  test_security_compliance.py  test_v2_correctness_hardening.py  test_validation_workflows.py
backend/product_discovery_terminal_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+109 files in other folders)
