[project]
name = "product-discovery-terminal-backend"
version = "0.1.0"
description = "Backend API and batch pipeline for the Product Discovery Terminal MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.50.2",
]

[project.optional-dependencies]
dev = [
  "mypy==2.2.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.20",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
markers = [
  "integration: tests that call external services and require explicit opt-in",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP037"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false
check_untyped_defs = true
warn_unused_configs = true
exclude = ["alembic"]
